--- a/wasm/Cargo.toml
+++ b/wasm/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2021"
 
 [dependencies]
 yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
+web-sys = "0.3.65"
+wasm-bindgen = "0.2.88"
